<resources>

    <string name="app_name">ReceiverApp</string>

    <!-- activity_requested_orders -->
    <string name="refresh">Refresh</string>
    <string name="req">Requested Orders</string>


    <!-- activity_view_order_template -->
    <string name="id">Order ID:</string>
    <string name="dest">Destination/Pickup Name:</string>
    <string name="itms">Order Items:</string>
    <string name="rej">Reject</string>
    <string name="accept">Accept</string>

    <!-- activity_print -->
    <string name="printPrev">Print Preview:</string>
    <string name="print">Print</string>
    <string name="pair">Pair with printer</string>

</resources>